Updated Swedish translation.
* man/po/sv.po: Updated to 1600t0f0u.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-05-26 21:16+0200\n"
-"PO-Revision-Date: 2008-05-13 09:23+0100\n"
+"PO-Revision-Date: 2008-05-27 07:48+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -11777,18 +11777,13 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dselect.1:396
-#, fuzzy
 msgid ""
 "When the sublist of packages is displayed initially, B<dselect> may have "
 "already set the requested selection status of some of the listed packages, "
 "in order to resolve the depends or conflicts that caused the dependency "
 "resolution screen to be displayed. Usually, it is best to follow up the "
 "suggestions made by B<dselect>."
-msgstr ""
-"När paketunderlistan visas kan B<dselect> redan ha satt efterfrågad "
-"valstatus för några av de listade paketen för att lösa de beroenden och "
-"konflikter som fick beroendelösningsskärmen att visas. Vanligtvis är det "
-"bäst att följa upp de förslag som görs av B<dselect>."
+msgstr "Redan då paketunderlistan från början visas kan B<dselect> ha satt efterfrågad valstatus för några av de listade paketen, för att lösa de beroenden eller konflikter som fick beroendelösningsskärmen att visas. Det är oftast bäst att följa upp de förslag B<dselect> ger."
 
 # type: Plain text
 #: ../../man/dselect.1:404
