--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2008-05-28  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Package.pm (extract): If we extract a
+	source package that uses a non-standard (!= 1.0) source package
+	then we create debian/source/format to remember it.
+	* scripts/dpkg-source.pl: Use debian/source/format as a new source
+	of format to try when building the package. Prioritize it lower than
+	command line and debian/control but higher than the default build
+	formats.
+	* man/dpkg-source.1: Document the above changes.
+
+2008-05-28  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Package/V3/quilt.pm: Factorize calls to
 	quilt in a new run_quilt() function. And check only once
 	if quilt is available while setting the default value of
