Updated Galician translation to 984t

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Fix a typo in dselect.1
 
   [ Updated dpkg translations ]
+  * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #481199
@@ -35,7 +36,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #481043
   * French (Christian Perrier).
 
- -- Guillem Jover <guillem@debian.org>  Mon, 12 May 2008 09:04:34 +0300
+ -- Jacobo Tarrio <jtarrio@debian.org>  Wed, 28 May 2008 20:47:41 +0100
 
 dpkg (1.14.19) unstable; urgency=low
 
