--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-04-13 12:53+0100\n"
+"PO-Revision-Date: 2008-05-28 20:45+0100\n"
 "Last-Translator: Jacobo Tarrío <jtarrio@debian.org>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
@@ -2812,7 +2812,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "número enteiro non válido para --%s: \"%.250s\""
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2858,7 +2858,7 @@ msgstr ""
 " Forzar cousas:\n"
 "  all [!]              Establece tódalas opcións de forzado\n"
 "  downgrade [*]        Substitúe un paquete por unha versión anterior\n"
-"  configure-any        Configura un paquete que poida axudar a estte\n"
+"  configure-any        Configura un paquete que poida axudar a este\n"
 "  hold                 Procesa os paquetes incidentais mesmo se están "
 "retidos\n"
 "  bad-path             Fallan programas imporantes en PATH, problema seguro\n"
@@ -2877,6 +2877,7 @@ msgstr ""
 "                       se non dá tamén unha opción confnew ou confold\n"
 "  confmiss [!]         Sempre instala os ficheiros de configuración que "
 "fallan\n"
+"  breaks [!]           Instala incluso se había romper outro paquete\n"
 "  conflicts [!]        Permite instalar paquetes que teñen un conflicto\n"
 "  architecture [!]     Procesa incluso paquetes dunha arquitectura "
 "incorrecta\n"
