--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-28  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 984t
+
 2008-05-18  Miroslav Kure  <kurem@debian.cz>
 
 	* cs.po: Updated to 984t
