libdpkg: Fix typo in comment

--- a/ChangeLog
+++ b/ChangeLog
@@ -138,6 +138,10 @@
 	dpkg is unable to create a file so that it also refers to the real
 	filename instead of the non-diverted name only.
 
+2008-05-29  Colin Watson  <cjwatson@debian.org>
+
+	* lib/triglib.c (trig_incorporate): Fix typo in comment.
+
 2008-05-24  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/build.c (do_build): Move argument name into a parameter to
