--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
+  * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #480626
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #481199
   * Czech (Miroslav Kure).
