Updated Basque translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Fix a typo in dselect.1
 
   [ Updated dpkg translations ]
+  * Basque (Piarres Beobide). Closes: #481043
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #480626
