--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-31  Piarres Beobide  <pi+debian@beobide.net>
+
+	* eu.po: Updated to 984t.
+
 2008-05-31  Hans Fredrik Nordhaug  <hans@nordhaug.priv.no>
 
 	* nb.po: Updated to 984t.
