--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #480626
+  * Simplified Chinese (Deng Xiyue). Closes: #483143
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #481199
   * Czech (Miroslav Kure).
