Add bug closure for Galician translation update.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #481043
-  * Galician (Jacobo Tarrio).
+  * Galician (Jacobo Tarrio). Closes: #483441
   * German (Sven Joachim).
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #480626
   * Simplified Chinese (Deng Xiyue). Closes: #483143
