dpkg-query: strip trailing slashes in parameters after -S or --search
* src/query.c (searchfiles): Trim trailing slashes (and slash dot) in the
arguments of dpkg -S.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     include the ELF format of the desired library. Closes: #474671
   * dpkg-gensymbols now refuses empty values for the the -v -P and -e
     parameters.
+  * dpkg -S now trims trailing slashes in its parameters. Closes: #129577
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
