--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-31  Raphael Hertzog  <hertzog@debian.org>
+
+	* src/query.c (searchfiles): Trim trailing slashes (and slash dot)
+	in the arguments of dpkg -S.
+
 2008-05-24  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/build.c (do_build): Move argument name into a parameter to
