dpkg(1): Use conffile for config files handled by dpkg
* man/dpkg.1: Use the term conffile for a configuration file handled
by dpkg. Drop reference to hamm. Updated description of values
supported by -D to include those which are trigger related.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * dpkg-gensymbols now refuses empty values for the the -v -P and -e
     parameters.
   * dpkg -S now trims trailing slashes in its parameters. Closes: #129577
+  * Update dpkg(1) to refer to conffile whenever we speak of configuration
+    file handled by dpkg. Thus harmonize vocabulary with the policy. Thanks
+    to Helge Kreutzmann <debian@helgefjell.de>. Closes: #381219
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
