--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-31  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg.1: Use the term conffile for a configuration file handled
+	by dpkg. Drop reference to hamm. Updated description of values
+	supported by -D to include those which are trigger related.
+
 2008-05-11  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-source.1: Properly escape hyphen in -i option.
