dpkg-deb: improve error message "unable to extract"
* src/archives.c (tarobject): Improve error message stating that
dpkg is unable to create a file so that it also refers to the real
filename instead of the non-diverted name only.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-01  Daniel Hahler  <debian-bugs@thequod.de>
+
+	* src/archives.c (tarobject): Improve error message stating that
+	dpkg is unable to create a file so that it also refers to the real
+	filename instead of the non-diverted name only.
+
 2008-05-31  Raphael Hertzog  <hertzog@debian.org>
 
 	* src/query.c (searchfiles): Trim trailing slashes (and slash dot)
