--- a/THANKS
+++ b/THANKS
@@ -35,6 +35,7 @@ Colin Plumb <colin@nyx.net>
 Colin Watson <cjwatson@debian.org>
 Dafydd Harries <daf@muse.19inch.net>
 Dan Gohman <gohmandj@mrs.umn.edu>
+Daniel Hahler <debian-bugs@thequod.de>
 Daniel Jacobowitz <dan@debian.org>
 Daniel Leidert <daniel.leidert@wgdd.de>
 Daniel Nylander <yeager@lidkoping.net>
