--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Update dpkg(1) to refer to conffile whenever we speak of configuration
     file handled by dpkg. Thus harmonize vocabulary with the policy. Thanks
     to Helge Kreutzmann <debian@helgefjell.de>. Closes: #381219
+  * Improve error message stating that dpkg is unable to create a file so that
+    it also refers to the real filename instead of the non-diverted name only.
+    Thanks to Daniel Hahler for the patch. Closes: #457135
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
