dpkg-gencontrol: accept "-c-" to read the control file from stdin
* scripts/Dpkg/Control.pm (parse, parse_fh, new): Add a new function
parse_fh() to be able to parse the control file from an arbitrary
file handle. Change parse() to use it and modify new() to parse
STDIN instead of a real file if the parameter is "-".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-06-01  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Control.pm (parse, parse_fh, new): Add a new function
+	parse_fh() to be able to parse the control file from an arbitrary
+	file handle. Change parse() to use it and modify new() to parse
+	STDIN instead of a real file if the parameter is "-".
+
 2008-06-01  Daniel Hahler  <debian-bugs@thequod.de>
 
 	* src/archives.c (tarobject): Improve error message stating that
