--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Improve error message stating that dpkg is unable to create a file so that
     it also refers to the real filename instead of the non-diverted name only.
     Thanks to Daniel Hahler for the patch. Closes: #457135
+  * dpkg-gencontrol can now again read the control file from its standard
+    input with "-c-". Closes: #465340
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
