dpkg-query: Trim trailing slash and slash dot from arguments
Do this when the arguments are path names, but not on patterns, to avoid
unexpected behaviour. Closes: #129577

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Fix link order when using libcompat.a and libintl.a by placing them after
     libdpkg.a. Based on a patch by Martin Koeppe. Closes: #481805
   * Remove duplicate program name from dpkg-trigger badusage output.
+  * Trim trailing slash and slash dot from 'dpkg -S' arguments when those
+    are path names, but not on patterns. Closes: #129577
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
