dpkg-query: Use strpbrk instead of strcspn and strlen

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-01  Guillem Jover  <guillem@debian.org>
 
+	* src/query.c (searchfiles): Use strpbrk instead of strcspn and
+	strlen.
+
+2008-06-01  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c: Include <dpkg-priv.h>.
 	(searchfiles): Trim trailing '/' and '/.' from file searches only
 	on path names, but not patterns.
