--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-06-01  Guillem Jover  <guillem@debian.org>
 
+	* lib/subproc.c (setup_subproc_signals): Use size_t intead of int
+	for the index, to fix a warning.
+	(cu_subproc_signals): Likewise.
+
+2008-06-01  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c (searchfiles): Use strpbrk instead of strcspn and
 	strlen.
 
