Take translation fix for German man page from Frank Lichtenheld from the trunk

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -2,6 +2,8 @@
 
 	* Regenerated all po(t) files, including updating the German one.
 	* Add Sven in de.add, he translated some paragraphs as well
+	* Take translation fix from Frank Lichtenheld <djpig@debian.org>
+	  from the trunk
 
 2008-05-27  Peter Karlsson  <peterk@debian.org>
 
