--- a/man/po/de.po
+++ b/man/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-06-03 21:58+0200\n"
-"PO-Revision-Date: 2008-06-03 22:25+0200\n"
+"PO-Revision-Date: 2008-06-03 22:46+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -7156,9 +7156,9 @@ msgid ""
 "generate."
 msgstr ""
 "Erstellt Informationen für das Binärpaket I<Paket>. Falls die Steuerdatei "
-"der Quellen nur Binärpakete aufführt, kann diese Option weggelassen werden; "
-"andernfalls ist sie notwendig, von welchen Binärpaketen die Informationen "
-"erstellt werden sollen."
+"der Quellen nur ein Binärpakete aufführt, kann diese Option weggelassen "
+"werden; andernfalls ist sie notwendig, um festzulegen, von welchen "
+"Binärpaketen die Informationen erstellt werden sollen."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:83
