libdpkg: Remove sentinel from catch_signals array

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-04  Guillem Jover  <guillem@debian.org>
+
+	* lib/subproc.c (catch_signals): Remove array sentinel.
+
 2008-06-01  Guillem Jover  <guillem@debian.org>
 
 	* lib/varbuf.c (varbufdupc): Use memset instead of ad-hoc operation.
