dpkg: Fix memory leaks on --set-selections

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-06-04  Guillem Jover  <guillem@debian.org>
 
+	* src/select.c (setselections): Free varbuf variables.
+
+2008-06-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/subproc.c (catch_signals): Remove array sentinel.
 
 2008-06-01  Guillem Jover  <guillem@debian.org>
