libdpkg: Switch log from a pointer to struct varbuf to just struct varbuf

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-04  Guillem Jover  <guillem@debian.org>
 
+	* lib/log.c (log_message): Switch log from a pointer to struct varbuf
+	to just struct varbuf.
+
+2008-06-04  Guillem Jover  <guillem@debian.org>
+
 	* src/main.c (setpipe): Fix the setting of more than one pipef.
 
 2008-06-04  Guillem Jover  <guillem@debian.org>
