Replace realloc plus error checking usage with m_realloc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-06-04  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb/build.c (getfi): Use m_realloc instead of realloc.
+	* dpkg-deb/info.c (info_spew): Likewise.
+	* lib/fields.c (f_dependency): Likewise.
+	* lib/parse.c (parsedb): Likewise.
+	* lib/varbuf.c (varbufextend): Likewise.
+	* src/main.c (commandfd): Likewise.
+
+2008-06-04  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h (varbufinit): Add a size argument, fix all callers.
 	(varbuf::init): Add an optional size argument.
 	(varbuf::varbuf): Likewise.
