--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-16  Guillem Jover  <guillem@debian.org>
+
+	* src/main.c (setpipe): Set file descriptors to close on exec.
+
 2008-08-15  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-buildpackage.pl (usage): Fix description of -si option.
