--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ dpkg (1.14.21) UNRELEASED; urgency=low
     ruling established in #430649).
   * Fix dpkg-source to not use -i and -I by default with "1.0" source
     packages. Closes: #495138
+  * Close --status-fd file descriptors on exec, so that they are not
+    inherited by the childs. Closes: #471488, #487684
 
   [ Guillem Jover ]
   * When loading the status file fix up any inconsistent package in state
