Close --status-fd file descriptors on exec
This avoids those being inherited by the childs. Closes: #471488

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-06-04  Guillem Jover  <guillem@debian.org>
 
+	* src/main.c (setpipe): Set file descriptors to close on exec.
+
+2008-06-04  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/build.c (getfi): Use m_realloc instead of realloc.
 	* dpkg-deb/info.c (info_spew): Likewise.
 	* lib/fields.c (f_dependency): Likewise.
