Updated Swedish translation.
man/po/sv.po: Updated to 1601t0f0u.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-04  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1601t.
+
 2008-06-03  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* Regenerated all po(t) files, including updating the German one.
