dpkg-source: improve the patch parser
* scripts/Dpkg/Source/Patch.pm (analyze): Enhance function to
parse correctly many more patches that are accepted by the patch
utility itself:
- ignore/strip carriage return of patches with Windows end of lines
- accept empty lines as contextual lines (instead of the expected " ")
- accept spaces as separator between filename and timestamp if
  there's no tab
- accept a name that differs on the +++ line if the name in --- is
  correct, and use the name in +++ if this one exists while the one
  on --- doesn't.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ dpkg (1.14.20) UNRELEASED; urgency=low
     as default name for the automatic patch created by the format "3.0
     (quilt)". This ensures a saner cohabitation with patch systems that
     apply all of debian/patches/*.{diff,patch}.
+  * Improve patch parser to accept more patches that are accepted by patch
+    itself.
 
   [ Helge Kreutzmann ]
   * Fix a typo in dselect.1
