dpkg-source/3.0 (quilt): bugfix in parser of series file
* scripts/Dpkg/Source/Package/V3/quilt.pm (get_patches): Really
skip all comments in the series files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-05  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V3/quilt.pm (get_patches): Really
+	skip all comments in the series files.
+
 2008-06-04  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Patch.pm (analyze): Enhance function to
