Catalan translation update with all fixes for #383448

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #481199
   * Czech (Miroslav Kure).
+  * Catalan (Jordi Mallach). Closes: #383448
 
   [ Updated manpages translations ]
   * Swedish (Peter Karlsson).
