Wiktor Wandachowicz: Update polish transl. for dpkg, scripts and the man pages

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Galician (Jacobo Tarrio). Closes: #483441
   * German (Sven Joachim).
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #480626
+  * Polish (Wiktor Wandachowicz).
   * Simplified Chinese (Deng Xiyue). Closes: #483143
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #481199
@@ -27,14 +28,16 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Catalan (Jordi Mallach). Closes: #383448
 
   [ Updated manpages translations ]
-  * Swedish (Peter Karlsson).
   * German (Helge Kreutzmann).
+  * Polish (Wiktor Wandachowicz).
+  * Swedish (Peter Karlsson).
 
   [ Updated scripts translations ]
-  * Swedish (Peter Karlsson).
   * French (Christian Perrier).
   * German (Helge Kreutzmann).
+  * Polish (Wiktor Wandachowicz).
   * Russian (Yuri Kozlov).
+  * Swedish (Peter Karlsson).
 
   [ Updated programs translations ]
   * Basque (Piarres Beobide). Closes: #481043
