--- a/po/pl.po
+++ b/po/pl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-05-01 14:33+0100\n"
+"PO-Revision-Date: 2008-06-06 06:08+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10-n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1093,24 +1093,24 @@ msgid ""
 "triggers ci file `%.250s' contains illegal trigger syntax in trigger name `"
 "%.250s': %.250s"
 msgstr ""
-"plik informacji kontrolnych wyzwalaczy \"%.250s\" ma nieprawidłową składnię "
-"w nazwie wyzwalacza \"%.250s\": %.250s"
+"plik informacji kontrolnych triggers \"%.250s\" ma nieprawidłową składnię w "
+"nazwie wyzwalacza \"%.250s\": %.250s"
 
 #: lib/triglib.c:605
 #, c-format
 msgid "unable to open triggers ci file `%.250s'"
-msgstr "nie można otworzyć pliku informacji kontrolnych wyzwalaczy \"%.250s\""
+msgstr "nie można otworzyć pliku informacji kontrolnych triggers \"%.250s\""
 
 #: lib/triglib.c:620
 msgid "triggers ci file contains unknown directive syntax"
 msgstr ""
-"plik informacji kontrolnych wyzwalaczy zawiera niepoprawną składnię dyrektywy"
+"plik informacji kontrolnych triggers zawiera niepoprawną składnię dyrektywy"
 
 #: lib/triglib.c:629
 #, c-format
 msgid "triggers ci file contains unknown directive `%.250s'"
 msgstr ""
-"plik informacji kontrolnych wyzwalaczy zawiera nieznaną dyrektywę \"%.250s\""
+"plik informacji kontrolnych triggers zawiera nieznaną dyrektywę \"%.250s\""
 
 #: lib/triglib.c:684
 #, c-format
@@ -2798,7 +2798,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "błędna wartość liczbowa dla --%s: \"%.250s\""
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2864,6 +2864,7 @@ msgstr ""
 "                        podano również opcji confold ani confnew.\n"
 "  confmiss [!]          Zainstalowanie brakujących plików konfig. bez "
 "pytania\n"
+"  breaks [!]            Instalacja mimo możliwości uszkodzenia innych pakietów\n"
 "  conflicts [!]         Zainstalowanie pakietów tworzących konflikt\n"
 "  architecture [!]      Przetwarzanie pakietów dla innej architektury\n"
 "  overwrite-dir [!]     Nadpisanie katalogów plikami z innych pakietów\n"
@@ -2955,7 +2956,7 @@ msgid ""
 " (current status `%.250s' with no pending triggers)"
 msgstr ""
 "pakiet %.250s jest nie gotowy na przetwarzanie wyzwalaczy\n"
-" (bieżący stan \"%.250s\", bez oczekujących wyzwalaczy)"
+" (bieżący stan \"%.250s\", bez zaplanowanych wyzwalaczy)"
 
 #: src/packages.c:334
 #, c-format
@@ -3693,8 +3694,8 @@ msgid ""
 msgstr ""
 "Opcje:\n"
 "  --admindir=<katalog>           Użycie <katalogu> zamiast %s.\n"
-"  --by-package=<pakiet>          Wymuszenie oczekiwania wyzwalacza dla "
-"pakietu\n"
+"  --by-package=<pakiet>          Wymuszenie pakietu oczekującego na "
+"wyzwalacz\n"
 "                                   (normalnie ustawiane przez dpkg).\n"
 "  --no-await                     Pakiety nie będą czekać na przetwarzanie.\n"
 "  --no-act                       Tylko test - bez wykonywania żadnych "
@@ -5387,7 +5388,7 @@ msgstr ""
 "  --infodir=<katalog>      to samo co \"--dir-file=<katalog>/dir\".\n"
 "  --info-dir=<katalog>     jak wyżej.\n"
 "  --keep-old               nie zamienia wpisów i nie usuwa pustych.\n"
-"  --remove                 usuwa wpis pasujący do bazowej <nazwy pliku>.\n"
+"  --remove                 usuwa wpis pasujący do bazowej <nazwy_pliku>.\n"
 "  --remove-exactly         usuwa wpis ściśle pasujący do <nazwy_pliku>.\n"
 "  --test                   włącza tryb testowy (nie wykonuje żadnych "
 "akcji).\n"
