--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
+
+        * po/pl.po: Updated to 1601t.
+	
 2008-06-04  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1601t.
