--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
+
+	* pl.po: Updated to 984t.
+
 2008-06-06  Jordi Mallach  <jordi@debian.org>
 
 	* ca.po: Updated to 887t71f26u.
