--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
+
+	* pl.po: Updated to 471t.
+
 2008-05-19  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 469t.
