--- a/scripts/po/pl.po
+++ b/scripts/po/pl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-12 08:17+0300\n"
-"PO-Revision-Date: 2008-05-04 23:44+0100\n"
+"PO-Revision-Date: 2008-06-06 01:32+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2871,9 +2871,9 @@ msgstr ""
 "mają się znaleźć w wynikowym archiwum Debiana"
 
 #: scripts/Dpkg/Source/Package/V2.pm:319
-#, fuzzy, perl-format
+#, perl-format
 msgid "unwanted binary file: %s"
-msgstr "zduplikowane pole binarne w %s"
+msgstr "niechciany plik binarny: %s"
 
 #: scripts/Dpkg/Source/Package/V2.pm:325
 #, perl-format
@@ -2881,6 +2881,8 @@ msgid ""
 "detected %d unwanted binary file(s) (add them in debian/source/include-"
 "binaries to allow their inclusion)."
 msgstr ""
+"wykryto %d niechciany(ch) plik(ów) binarny(ch) (należy je wymienić w "
+"debian/source/include-binaries aby umożliwić ich włączenie)."
 
 #: scripts/Dpkg/Source/Package/V2.pm:338
 msgid "unrepresentable changes to source"
@@ -3042,7 +3044,7 @@ msgstr ""
 "modyfikowanie .git/config w celu zamiany na komentarz niektórych ustawień"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to append to %s"
 msgstr "nie można dopisać do %s"
 
